--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,5 +1,5 @@
 .spinner-center {
-    position:  absolute;
-    top: 50%;
-    left: calc(50%-30px)
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
